# local-time-tracker

./: .gitignore  .tool-versions  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: time-tracker-design.md
src/: App.tsx  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_folders.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: artifacts.rs  entries.rs  export.rs  folders.rs  mod.rs  reports.rs  tasks.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs
src/api/: index.ts
src/components/: EntryEditor.ts  EntryEditor.tsx  ExportImport.ts  Report.ts  Report.tsx  Settings.tsx  TaskManager.ts  TaskManager.tsx  Timeline.ts  Timeline.tsx  Timer.ts  Timer.tsx
src/components/ui/: button.tsx
src/hooks/: useStore.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: format.ts
