[package]
name = "local-time-tracker"
version = "0.1.0"
description = "A local-first time tracking application"
authors = ["you"]
edition = "2021"

[lib]
name = "local_time_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["devtools"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
duckdb = { version = "1.4", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
